test/ClangImporter/incomplete_objc_types_compatibility_complete_incomplete_inter_file_swift_definition.code
// RUN: %empty-directory(%t)
// RUN: split-file %s %t

// RUN: %target-build-language -module-name CompleteCodiraTypes -parse-as-library %S/Inputs/custom-modules/IncompleteTypes/complete-language-types.code -emit-module -emit-module-path %t/CompleteCodiraTypes.codemodule
// RUN: not %target-language-frontend -enable-upcoming-feature ImportObjcForwardDeclarations -enable-objc-interop -typecheck -I %S/Inputs/custom-modules/IncompleteTypes -I %t %t/incomplete_definition.code %t/full_definition.code -diagnostic-style toolchain 2>&1 | %FileCheck %s

// REQUIRES: objc_interop
// REQUIRES: language_feature_ImportObjcForwardDeclarations

//--- full_definition.code

import CompleteCodiraTypes

//--- incomplete_definition.code

import ObjCLibraryForwardDeclaringCompleteCodiraTypes

@main
class Main {
    static fn main() {
        immutable incompleteFoo = returnAFoo()!
        // CHECK:      incomplete_definition.code:{{[0-9]+}}:{{[0-9]+}}: error: cannot find 'returnAFoo' in scope
        // CHECK-NEXT: immutable incompleteFoo = returnAFoo()!
        // CHECK-NEXT:                     ^~~~~~~~~~
        // CHECK-NEXT: objc-library-forward-declaring-complete-language-types.h:{{[0-9]+}}:{{[0-9]+}}: note: function 'returnAFoo' unavailable (cannot import)
        // CHECK-NEXT: Foo *returnAFoo();
        // CHECK-NEXT: ^
        // CHECK-NEXT: objc-library-forward-declaring-complete-language-types.h:{{[0-9]+}}:{{[0-9]+}}: note: return type unavailable (cannot import)
        // CHECK-NEXT: Foo *returnAFoo();
        // CHECK-NEXT: ^
        // CHECK-NEXT: objc-library-forward-declaring-complete-language-types.h:{{[0-9]+}}:{{[0-9]+}}: note: interface 'Foo' is incomplete
        // CHECK-NEXT: Foo *returnAFoo();
        // CHECK-NEXT: ^
        // CHECK-NEXT: objc-library-forward-declaring-complete-language-types.h:{{[0-9]+}}:{{[0-9]+}}: note: interface 'Foo' is incomplete and cannot be imported as a stub; its name conflicts with a class in module CompleteCodiraTypes
        // CHECK-NEXT: @class Foo;
        // CHECK-NEXT: ^
        // CHECK-NEXT: objc-library-forward-declaring-complete-language-types.h:{{[0-9]+}}:{{[0-9]+}}: note: interface 'Foo' forward declared here
        // CHECK-NEXT: @class Foo;
        // CHECK-NEXT: ^
    }
}
